fix navbar mobile spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -181,7 +181,7 @@ a {
 .toggler {
 	display: flex;
 	align-items: center;
-	margin-left: 2em;
+	margin-left: 1em;
 	opacity: 0.8;
   }
   
@@ -190,8 +190,8 @@ a {
   }
   
   .toggler-slider {
-	width: 28px;
-	height: 14px;
+	width: 24px;
+	height: 10px;
 	background-color: var(--color-light-brown1);
 	border-radius: 2rem;
 	margin-inline: 7px;
@@ -204,10 +204,26 @@ a {
   }
 
   .toggler-slider-circle {
-	height: 14px;
-	width: 14px;
+	height: 10px;
+	width: 10px;
 	background-color: var(--color-dark-brown1);
 	border-radius: 50%;
+  }
+
+  @media (min-width: 400px) {
+	.toggler {
+		margin-left: 2em;
+	}
+
+	.toggler-slider {
+		width: 28px;
+		height: 14px;
+	}
+
+	.toggler-slider-circle {
+		height: 14px;
+		width: 14px;
+	}
   }
   
   nav.dark .toggler-slider {
